[package]
name = "async-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- Async
tokio = { version = "1.37.0", features = ["full"] }
# -- Http requests
reqwest = { version = "0.12.4", features = ["json"] }
# -- resolve DNS
hickory-resolver = "0.24.1"
# -- Json
serde = { version = "1.0.200", features = ["derive"] }
# -- Utils
derive_more = { version = "0.99.17", features = ["from"] }
tokio-stream = "0.1.15"
futures = "0.3.30"

[lints]
workspace = true
