[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Async
async-trait = "0.1.80"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
# -- Html parsing
select = "0.6.0-alpha.1"
# -- Http requests
reqwest = { version = "0.12.4", features = ["json"] }
# -- Utils
derive_more = { version = "0.99.17", features = ["from"] }


[lints]
workspace = true
