[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Async
async-trait = "0.1.80"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
# -- Html parsing
select = "0.6.0-alpha.1"
# -- Http requests
reqwest = { version = "0.12.4", features = ["json"] }
# -- Logs
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.3"
# -- Serialize
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.117"
# -- Utils
derive_more = { version = "0.99.17", features = ["from"] }
lazy-regex = "3.1.0"


[lints]
workspace = true
