[package]
name = "scanner"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
rayon = "1.10.0"
derive_more = { version = "0.99.17", features = ["from"] }
hickory-resolver = "0.24.1"
ureq = { version = "2.9.7", features = ["json"] }

[lints]
workspace = true
