[package]
name = "simple-scanner"
version = "0.1.0"
edition = "2021"


[dependencies]
# -- resolve DNS
hickory-resolver = "0.24.1"
# -- Multithreading
rayon = "1.10.0"
# -- Http requests
ureq = { version = "2.9.7", features = ["json"] }
# -- Json
serde = { version = "1.0.200", features = ["derive"] }
# -- Utils
derive_more = { version = "0.99.17", features = ["from"] }

[lints]
workspace = true
